changelog

=== next

+ Tables

+ Reduce retries talking to dumb servers.

=== 0.8.6 Sartorial Headpiece

++ Import command now supports the elephant in the room.

+ Minimal support for Move activity.

+ deluser command.

+ Configurable avatar colors.

+ Optional pleroma color scheme for the home sick...

+ Rebalance colors slightly. Looks a little fresher now?

+ Add unplug command for servers that have dropped off the net.

+ Add notes field to honkers to document their downfall.

+ Add notes field to filters for record keeping.

+ Negated search -terms.

+ A raw sendactivity API action for the bold.

+ More flexible meme names.

=== 0.8.5 Turnkey Blaster

+ Codenames in changelog.

+ Fix some bugs that may have interfered with federation.

+ Add some re: re: re: to replies.

+ Set an avatar. If you must.

+ Try a little harder to recover from httpsig failures.

+ Add cite tag for block quote attributions.

+ @media print styles.

+ Disable overscroll (pull down) refresh.

+ Can never seem to version the changelog correctly.

=== 0.8.4

+ Fix bug preventing import of keys

+ Option to switch map links to Apple.

=== 0.8.3

- mistag.

=== 0.8.2 Game Warden

++ Import command to preserve those embarssassing old posts from Twitter.

++ Add a limited /api for the robotrons.

+ Resource usage stats on about page.

+ Unveil and pledge restrictions on OpenBSD.

+ Lists supported in markdown.

+ Rewrite admin console to avoid large dependencies.

+ "Bug" fixes.

=== 0.8.1

++ Make it easier to upgrade by decoupling data dir from ".".

+ Timestamps displayed in server time with TZ.

+ version command to print current version.

+ Amend changelog for 0.8.0 to include omitted elements:
	Syntax highlighting for code blocks.
	Something resembling an actual manual.

=== 0.8.0 Ordinary Octology

+++ Add Honk Filtering and Censorship System (HFCS).

+++ Editing honks (Update activity).

++ Subscribe to hashtags.

++ Search. I hate it already.

++ Hashtags that work?
